--- a/Chessboard.UI/Users/LoginWindow.xaml
+++ b/Chessboard.UI/Users/LoginWindow.xaml
@@ -11,13 +11,14 @@
         <Label Content="Log in as Player 1:" FontSize="14" Margin="20 20 0 0" FontWeight="Bold" Foreground="{DynamicResource FontBrightColor}"/>
         <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
             <Label Content="Username:" Margin="50 0 0 0" Foreground="{DynamicResource FontBrightColor}" />
-            <TextBox Name="txt_Username" Text="username" Margin="25 0 0 0" Width="150" Height="30" VerticalContentAlignment="Center" MouseDown="TextBox_MouseDown" />
+            <TextBox Name="txt_Username" Text="username" Margin="25 0 0 0" Width="150" Height="30" VerticalContentAlignment="Center"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
             <Label Content="Password:" Margin="50 0 0 0" Foreground="{DynamicResource FontBrightColor}" />
             <PasswordBox Name="txt_Password" Margin="29 0 0 0" Width="150" Height="30" VerticalContentAlignment="Center" />
         </StackPanel>
         <Button Style="{DynamicResource BaseButton}" Click="btn_LoginClick" Content="Login" Margin="20 15 0 0" Width="80"/>
-        <Button Style="{DynamicResource Label-Button}" Click="btn_CreateUserClick" Content="Don't Have an Account?" Margin="120 15 0 0" Width="140" />
+        <Button Style="{DynamicResource Label-Button}" Click="btn_ContinueWithoutLogin" Content="Continue Without Login" Margin="-180 30 0 0" Width="140" />
+        <Button Style="{DynamicResource Label-Button}" Click="btn_CreateUserClick" Content="Don't Have an Account?" Margin="150 -15 0 0" Width="140" />
     </StackPanel>
 </Window>
