--- a/Chessboard.UI/Users/LoginWindow.xaml
+++ b/Chessboard.UI/Users/LoginWindow.xaml
@@ -8,7 +8,7 @@
         ResizeMode="CanMinimize" Title="Login" Icon="../Images/icon.png"
         Height="280" Width="350">
     <StackPanel Background="{DynamicResource BackColor}" Width="350" Height="300" Orientation="Vertical" >
-        <Label Content="Log in as Player 1:" FontSize="14" Margin="20 20 0 0" FontWeight="Bold" Foreground="{DynamicResource FontBrightColor}"/>
+        <Label Name="lbl_LoginText" Content="Log in as Player 1:" FontSize="14" Margin="20 20 0 0" FontWeight="Bold" Foreground="{DynamicResource FontBrightColor}"/>
         <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
             <Label Content="Username:" Margin="50 0 0 0" Foreground="{DynamicResource FontBrightColor}" />
             <TextBox Name="txt_Username" Text="username" Margin="25 0 0 0" Width="150" Height="30" VerticalContentAlignment="Center"/>
@@ -18,7 +18,7 @@
             <PasswordBox Name="txt_Password" Margin="29 0 0 0" Width="150" Height="30" VerticalContentAlignment="Center" />
         </StackPanel>
         <Button Style="{DynamicResource BaseButton}" Click="btn_LoginClick" Content="Login" Margin="20 15 0 0" Width="80"/>
-        <Button Style="{DynamicResource Label-Button}" Click="btn_ContinueWithoutLogin" Content="Continue Without Login" Margin="-180 30 0 0" Width="140" />
+        <Button Style="{DynamicResource Label-Button}" Click="btn_ContinueWithoutLogin" Name="btn_ContinueWOLogin" Content="Continue Without Login" Margin="-180 30 0 0" Width="140" />
         <Button Style="{DynamicResource Label-Button}" Click="btn_CreateUserClick" Content="Don't Have an Account?" Margin="150 -15 0 0" Width="140" />
     </StackPanel>
 </Window>
